--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,11 @@
 ---
 galaxy_info:
-  author: your name
+  author: James Barlow
   description: 
-  company: your company (optional)
+  company: Jurisdesk LLC
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
-  # issue_tracker_url: http://example.com/issue/tracker
+  # issue_tracker_url: http://github.com/jdesk/Docker-Ansible/tracker
   # Some suggested licenses:
   # - BSD (default)
   # - MIT
@@ -13,7 +13,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: license (MIT)
   min_ansible_version: 1.2
   #
   # Below are all platforms currently available. Just uncomment
@@ -53,17 +53,17 @@ galaxy_info:
   #  - 12.3
   #  - 13.1
   #  - 13.2
-  #- name: Amazon
-  #  versions:
-  #  - all
-  #  - 2013.03
-  #  - 2013.09
-  #- name: GenericBSD
-  #  versions:
-  #  - all
+  - name: Amazon
+    versions:
+    - all
+    - 2013.03
+    - 2013.09
+  - name: GenericBSD
+    versions:
+    - all
   #  - any
-  #- name: FreeBSD
-  #  versions:
+  - name: FreeBSD
+    versions:
   #  - all
   #  - 8.0
   #  - 8.1
@@ -73,10 +73,10 @@ galaxy_info:
   #  - 9.0
   #  - 9.1
   #  - 9.1
-  #  - 9.2
-  #- name: Ubuntu
+     - 9.2
+  - name: Ubuntu
   #  versions:
-  #  - all
+     - all
   #  - lucid
   #  - maverick
   #  - natty
@@ -101,11 +101,11 @@ galaxy_info:
   #  versions:
   #  - all
   #  - any
-  #- name: Debian
+  - name: Debian
   #  versions:
   #  - all
   #  - etch
-  #  - jessie
+     - jessie
   #  - lenny
   #  - squeeze
   #  - wheezy
@@ -114,21 +114,26 @@ galaxy_info:
   # the platforms above, uncomment those that apply to your role.
   #
   #categories:
-  #- cloud
-  #- cloud:ec2
+  - cloud:digitalocean
+  - cloud:ec2
   #- cloud:gce
-  #- cloud:rax
-  #- clustering
-  #- database
-  #- database:nosql
-  #- database:sql
-  #- development
-  #- monitoring
-  #- networking
-  #- packaging
-  #- system
-  #- web
-dependencies: []
+  - cloud:rax
+  - clustering
+  - database
+  - database:nosql
+  - database:sql
+  - development
+  - monitoring
+  - networking
+  - packaging
+  - system
+  - web
+dependencies: 
+  - node 4.2.2
+  - redis-server
+  - nginx
+  - postgresql
+  - mongo
   # List your role dependencies here, one per line.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
